styles: fix the scaling of text and image on mobile devices
styles: fix the size
image size was too big that it was creating zoom
font size was too big reduced it to 0.95rem

--- a/site/index.css
+++ b/site/index.css
@@ -100,3 +100,14 @@ hr {
     align-self: center;
     margin: 1em auto 1em;
 }
+
+@media (max-width: 768px) {
+    body {
+        font-size: 0.95rem;
+    }
+
+    img {
+        max-width: 100%;
+        height: auto;  
+    }
+}
